--- a/src/app/mc/mega-campaign/mega-campaign.component.scss
+++ b/src/app/mc/mega-campaign/mega-campaign.component.scss
@@ -71,7 +71,7 @@ h1 {
     text-decoration: underline;
 }
 
-.plot-container, .lines-plot-container {
+.plot-container, .lines-plot-container, .timebar-container {
     width: 100%;
     height: 60vh;
     display: flex;
@@ -84,4 +84,18 @@ h1 {
 
 .lines-plot-container {
     height: 80vh;
+}
+
+.timebar-container {
+    height: auto;
+    min-height: 400px;
+    background-color: var(--background-color);
+}
+
+.timebar-plot {
+    width: 100%;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
